# ITPU

./: .gitignore  .gitkeep  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  ask_claude.py  issues.json  profile_bci_workload.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  profile_bci_workload.yml
benchmarks/: compare_baselines.py  mi_baselines.py  mi_grid.py
benchmarks/gcmi/: README.md
docs/: ITPU_overview.md  api.md  coding_manual.md  datasets.md  estimator_guide.md  kernels.md  partner_template.md  roadmap.md  ws1_pilot.ipynb
docs/ITPU_patch/code/phenomenology/: coding_manual.md  phenom_tools.py
docs/advisory/: tab_invite_template.md
docs/hiring/: chip_architect_jd.md
docs/partnership/: loi_template.md
docs/roadmap/: 7_day_sprint.md
docs/validation/: mi_matrix.md
examples/: eeg_eye_state_demo.py  eeg_realtime_dashboard.py  eeg_streaming_demo.py  mi_demo.py  mi_grid.py  mi_quickstart_eeg_eye_state.py  windowed_demo.py
github/ISSUE_TEMPLATE/: partner_inquiry.md
hardware/: fpga_notes.md  isa_sketch.md
itpu/: __init__.py  data.py  sdk.py  types.py  windowed.py
itpu/kernels_sw/: __init__.py  hist.py  ksg.py  streaming.py
itpu/stats/: __init__.py  fdr.py  multiple_testing.py  permutation.py  surrogate_test.py  surrogates.py
itpu/utils/: __init__.py  windowed.py
results/benchmarks/: mi_comparison.csv
results/benchmarks/gcmi/: README.md
scripts/: setup_dev.sh  smoke_test.py
src/itpu/: __init__.py  sdk.py
src/itpu/kernels_sw/: hist.py  ksg.py
tests/: test_hist.py  test_imports.py  test_imports_and_nulls.py  test_ksg.py  test_mi_gaussian.py  test_mi_hist.py  test_multiple_testing.py  test_output_all.py  test_sdk_hist.py  test_sdk_matrix.py  test_stats.py  test_surrogate_validation.py  test_surrogates.py  test_types.py  test_windowed.py
validation/ksg/: .gitignore  REPORT.md  bench_audit.py  conftest.py  ground_truth.py  ksg.py  oracles.py  run_suite.py  test_ksg.py
